cmake_minimum_required(VERSION 3.21)
project(untitled)

set(CMAKE_CXX_STANDARD 23)

add_executable(untitled main.cpp "warehouse/hackerrank/llilys homework.cpp" "warehouse/hackerrank/Hackerland Radio Transmitters.cpp" "warehouse/hackerrank/Ice Cream Parlor.cpp" warehouse/hackerrank/Pairs.cpp "warehouse/hackerrank/The Coin Change Problem.cpp" "warehouse/hackerrank/Sherlock and Array.cpp" "warehouse/hackerrank/Connected Cells in a Grid.cpp")
